tests/integration/reject/pact_errors.rsg
// TEST: compile_error

// === field decl ===
// EXPECT-ERROR: expected method

pact Named {
    name: str
}

struct Foo {
    name: str
}

fn main() {
    f := Foo { name = "test" }
}

// === missing field ===
// EXPECT-ERROR: expected method or pact name in pact declaration; fields are not supported in pacts

pact Named {
    name: str
}

fn main() {}

// === missing method ===
// EXPECT-ERROR: missing required method 'to_string' from pact 'Stringable'

pact Stringable {
    fn to_string() -> str
}

struct Foo {
    x: i32 = 0
}

ext Foo impl Stringable {}

fn main() {
    f := Foo {}
}

// === ext pact missing method ===
// EXPECT-ERROR: missing required method 'describe' from pact 'Describable'

pact Describable {
    fn describe() -> str
}

struct Foo {
    x: i32 = 0
}

ext Foo impl Describable {
    fn other(*f) -> i32 { f.x }
}

fn main() {
    f := Foo {}
}

// === receiver mismatch ptr vs value ===
// EXPECT-ERROR: method 'greet' has receiver 'self' but pact 'Greetable' requires '*self'

pact Greetable {
    fn greet(*self) -> str
}

struct Foo {
    x: i32 = 0
}

ext Foo impl Greetable {
    fn greet(self) -> str { "hi" }
}

fn main() {
    f := Foo {}
}

// === receiver mismatch value vs ptr ===
// EXPECT-ERROR: method 'name' has receiver '*self' but pact 'Named' requires 'self'

pact Named {
    fn name(self) -> str
}

struct Bar {
    s: str = ""
}

ext Bar impl Named {
    fn name(*self) -> str { self.s }
}

fn main() {
    b := Bar {}
}
